<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etnama_pembeli"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etNamaPelanggan"
                    android:layout_width="251dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"

                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etnama_barang"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etNamaBarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"

                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etjumlah_barang"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etJmlBarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"

                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etharga_rp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etHarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"

                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etuang_bayar"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etJmlUang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"

                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btnKeranjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/keranjang"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btnProses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/proses"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tvNamaPembeli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvnama_pembeli"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNamaBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnama_barang"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJmlBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvjumlah_barang"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvharga"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUangBayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvuang_bayar"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tvtotal"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvKembalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/kembalian"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bonus"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvKeterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />




        <TableLayout
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHapus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/hapus_data"
                android:textColor="@android:color/white"
                 />

            <Button
                android:id="@+id/btnKeluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/keluar"
                android:textColor="@android:color/white"
                 />

        </TableLayout>

    </TableLayout>

</ScrollView>